--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,15 @@
     margin-right: 25px;
 }
 
+#collapsable-nav a { /* Collapsed nav menu text */
+font-size: 1.2em;
+}
+
+#collapsable-nav a span { /* Collapsed nav menu glyph */
+font-size: 1em;
+margin-right: 5px;
+}
+
 .icon-bar{
     background-color: white;
 }
